--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Alpha Tech Solutions</title>
     <link rel="icon" href="./images/alpha_logo.jpeg" type="image/x-icon" >
 
-    <link rel="stylesheet" href="./node_modules/animate.css/animate.css">
+    
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
     
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
@@ -41,11 +41,11 @@
               <i class="fa-solid fa-briefcase fa-beat-fade p-2"></i> Services
             </a>
             <ul class="dropdown-menu"style="background-color: #f1e392;" >
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-desktop p-2 text-success animate__animated animate__backInLeft"></i>Web Development</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-mobile-screen-button  p-2 text-success animate__animated animate__backInLeft"></i>Mobile Apps</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-cart-plus  p-2 text-success animate__animated animate__backInLeft"></i>E-Commerce Website</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-palette  p-2 text-success animate__animated animate__backInLeft"></i>Logo & Web Design</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fa-brands fa-digital-ocean  p-2 text-success animate__animated animate__backInLeft"></i>Digital Marketing Services</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-desktop p-2 text-success "></i>Web Development</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-mobile-screen-button  p-2 text-success "></i>Mobile Apps</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-cart-plus  p-2 text-success "></i>E-Commerce Website</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-palette  p-2 text-success "></i>Logo & Web Design</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fa-brands fa-digital-ocean  p-2 text-success "></i>Digital Marketing Services</a></li>
             </ul>
           </li>
 
