--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house fa-beat-fade p-2"></i></i>Home</a>
+            <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house  p-2"></i></i>Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fa-solid fa-book fa-beat-fade p-2"></i>About Us</a>
+            <a class="nav-link" href="#"><i class="fa-solid fa-book  p-2"></i>About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fa-solid fa-globe fa-beat-fade p-2"></i>Clients</a>
+            <a class="nav-link" href="#"><i class="fa-solid fa-globe  p-2"></i>Clients</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-briefcase fa-beat-fade p-2"></i> Services
+              <i class="fa-solid fa-briefcase  p-2"></i> Services
             </a>
             <ul class="dropdown-menu"style="background-color: #f1e392;" >
               <li><a class="dropdown-item" href="#"><i class="fa-solid fa-desktop p-2 text-success "></i>Web Development</a></li>
@@ -50,13 +50,13 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fa-solid fa-image fa-beat-fade p-2"></i>Gallery</a>
+            <a class="nav-link" href="#"><i class="fa-solid fa-image  p-2"></i>Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fa-solid fa-envelope fa-beat-fade p-2"></i>Blog</a>
+            <a class="nav-link" href="#"><i class="fa-solid fa-envelope  p-2"></i>Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fa-solid fa-phone fa-beat-fade p-2"></i>Contact</a>
+            <a class="nav-link" href="#"><i class="fa-solid fa-phone p-2"></i>Contact</a>
           </li>
         </ul>
         
